# gnucash-cli

./: LICENSE  README.md  SampleAccounts.yaml  bs.py  cli.py  env.sample  gnucash_cli.py  init.accounts  pyproject.toml  shared_vars.py
app/: main.py  utils.py
app/models/: account.py  book.py  transaction.py
app/routers/: accounts.py  books.py  transactions.py
