[project]
name = "my-money-piecash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "piecash>=1.2.1",
    "pydantic>=2.10.4",
    "pydantic-ai>=0.0.16",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
