[project]
name = "my-money-piecash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.6",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "piecash>=1.2.1",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.10.4",
    "pydantic-ai>=0.0.16",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "reportlab>=4.2.5",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]
